--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "name": "recipebydesign",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Towson, Josh Knox",
